navbar z-index fix

--- a/furnace-react/src/layouts/navbar/Navbar.css
+++ b/furnace-react/src/layouts/navbar/Navbar.css
@@ -5,7 +5,7 @@
 	position: sticky;
 	top: 0px;
 	width: 100%;
-	z-index: 100;
+	z-index: 101;
 
 	/*
     border-bottom: 1px solid #7e7e7e;
